--- a/Lab03-sqlite-patent.ipynb
+++ b/Lab03-sqlite-patent.ipynb
@@ -170,16 +170,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "id": "2717ea88-bdfe-4acb-8e02-644f0ebb215d",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Your solution should be in the last cell"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "id": "2cb6e042-933c-4de8-af6f-026dfa89f34c",
       "metadata": {},
       "outputs": [],
@@ -187,14 +177,14 @@
         "%%sql\n",
         "\n",
         "SELECT\n",
-        "  p.PATENT,\n",
-        "  p.POSTATE,\n",
-        "  COALESCE(cs.co_state_citations, 0) AS CO_STATE_CITATIONS\n",
+        "  p.*,\n",
+        "  cs.PATENT AS PATENT_1,\n",
+        "  COALESCE(cs.CO_CITED_COUNT, 0) AS CO_CITED_COUNT\n",
         "FROM patents p\n",
         "LEFT JOIN (\n",
         "  SELECT\n",
         "    c.CITING AS PATENT,\n",
-        "    COUNT(*) AS co_state_citations\n",
+        "    COUNT(*) AS CO_CITED_COUNT\n",
         "  FROM citations c\n",
         "  JOIN patents p_citing\n",
         "    ON c.CITING = p_citing.PATENT\n",
@@ -207,7 +197,7 @@
         ") cs\n",
         "  ON p.PATENT = cs.PATENT\n",
         "WHERE TRIM(COALESCE(p.POSTATE, '')) <> ''\n",
-        "ORDER BY CO_STATE_CITATIONS DESC, p.PATENT ASC\n",
+        "ORDER BY CO_CITED_COUNT DESC, p.PATENT ASC\n",
         "LIMIT 13;"
       ]
     }
